# KeypadPico

./: .gitmodules  CMakeLists.txt  README.md  main.c  setup.sh
lib/Config/: DEV_Config.c  DEV_Config.h
lib/GUI/: GUI_Paint.c  GUI_Paint.h
lib/e-Paper/: EPD_2in13b_V3.c  EPD_3in7.c  EPD_3in7.h  EPD_4in2.c  EPD_4in2.h  EPD_4in2b_V2.c  EPD_4in2b_V2.h
scripts/: example.json  send_json_data.py
src/button/: CMakeLists.txt  button.c  button.h
src/configuration/: CMakeLists.txt  config.h  default_config.c  default_config.h
src/display/: CMakeLists.txt  display.c  display.h
src/filesystem/: CMakeLists.txt  filesystem.c  filesystem.h
src/hid/: CMakeLists.txt  hid.c  hid.h  tusb_config.h  usb_descriptors.c
src/img/: CMakeLists.txt  img_data.c  img_data.h
